# chiron

./: README.md
find-my-friends/: .gitignore  README.md  auth.html  auth.js  background.js  create-icons.html  manifest.json  popup.html  popup.js
find-my-friends-backend/: README.md  schema.sql
find-my-friends-mac/: .gitignore
find-my-friends-mac/electron-app/: browserTracker.js  friendsSync.js  index.html  main.js  package.json  pill-renderer.js  pill.css  pill.html  renderer.js  styles.css
hopscotch/: .gitignore  IMPLEMENTATION_PLAN.md  README.md  package.json
hopscotch/src/ai-agent/: index.ts  stub-agent.ts
hopscotch/src/history-collector/: chrome-collector.ts  index.ts  manager.ts
hopscotch/src/main/: index.ts
hopscotch/src/shared/: index.ts  interfaces.ts  types.ts
hopscotch/src/storage/: index.ts  sqlite-storage.ts
hopscotch/src/ui/: index.ts  stub-controller.ts
info-share/: main.js  package-lock.json  package.json  widget-mockup.html  widget.html
show-logs/: README.md  pyproject.toml
show-logs/src/show_logs/: __init__.py  cli.py
